dom/media/platforms/ffmpeg/FFmpegVideoDecoder.cpp
@@ -542,8 +542,6 @@ FFmpegVideoDecoder<LIBAV_VER>::CreateEmptyPlanarYCbCrData(
                                  &paddedYSize.height);
   data.mYSize = gfx::IntSize{paddedYSize.Width(), paddedYSize.Height()};
   data.mYStride = data.mYSize.Width() * bytesPerChannel;
-  data.mCroppedYSize = Some(
-      gfx::IntSize{aCodecContext->coded_width, aCodecContext->coded_height});
 
   MOZ_ASSERT(
       IsColorFormatSupportedForUsingCustomizedBuffer(aCodecContext->pix_fmt));
@@ -560,7 +558,6 @@ FFmpegVideoDecoder<LIBAV_VER>::CreateEmptyPlanarYCbCrData(
   data.mCbCrSize =
       gfx::IntSize{paddedCbCrSize.Width(), paddedCbCrSize.Height()};
   data.mCbCrStride = data.mCbCrSize.Width() * bytesPerChannel;
-  data.mCroppedCbCrSize = Some(gfx::IntSize{uvDims.Width(), uvDims.Height()});
 
   // Setting other attributes
   data.mPicSize =
@@ -585,9 +582,8 @@ FFmpegVideoDecoder<LIBAV_VER>::CreateEmptyPlanarYCbCrData(
       "Created plane data, YSize=(%d, %d), CbCrSize=(%d, %d), "
       "CroppedYSize=(%d, %d), CroppedCbCrSize=(%d, %d), ColorDepth=%hhu",
       data.mYSize.Width(), data.mYSize.Height(), data.mCbCrSize.Width(),
-      data.mCbCrSize.Height(), data.mCroppedYSize->Width(),
-      data.mCroppedYSize->Height(), data.mCroppedCbCrSize->Width(),
-      data.mCroppedCbCrSize->Height(), static_cast<uint8_t>(data.mColorDepth));
+      data.mCbCrSize.Height(), data.mPicSize.Width(), data.mPicSize.Height(),
+      uvDims.Width(), uvDims.Height(), static_cast<uint8_t>(data.mColorDepth));
   return data;
 }
 
